exept action buttons all finished

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -2,7 +2,12 @@
   "name": "payment-form",
   "firstRun": false,
   "exportConfig": true,
-  "fileConfigs": [],
+  "fileConfigs": [
+    {
+      "path": "css/style.scss",
+      "configJson": "{\"forceCompile\":false,\"customOutput\":\"\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"},\"compiler-autoprefixer\":{\"enabled\":false},\"compiler-minify-css\":{\"enabled\":false}}"
+    }
+  ],
   "fileTree": {
     "expandedDirs": [
       "css"
@@ -17,18 +22,14 @@
       "prepros-6.config",
       "Prepros Export"
     ],
-    "hideUnwatchedFiles": false
+    "hideUnwatchedFiles": true
   },
   "imports": [
     {
       "path": "css/style.scss",
       "imports": [
-        "css/_normalize.scss"
-      ]
-    },
-    {
-      "path": "css/_base.scss",
-      "imports": [
+        "css/_base.scss",
+        "css/_layout.scss",
         "css/_normalize.scss"
       ]
     }
@@ -39,40 +40,19 @@
   "fileWatcher": {
     "enabled": true,
     "watchedExtensions": [
-      "less",
       "sass",
       "scss",
-      "styl",
-      "md",
-      "markdown",
-      "coffee",
-      "js",
-      "jade",
-      "haml",
-      "slim",
-      "ls",
-      "kit",
-      "png",
-      "jpg",
-      "jpeg",
-      "ts",
-      "pug",
-      "css",
-      "html",
-      "htm",
-      "php"
+      "html"
     ]
   },
   "pathFilters": [
-    "node_modules",
-    ".*",
-    "bower_components",
     "prepros.config",
     "Prepros Export",
     "prepros-6.config",
     "prepros.cfg",
     "wp-admin",
-    "wp-includes"
+    "wp-includes",
+    "_*.scss"
   ],
   "server": {
     "port": 7879,
@@ -149,7 +129,7 @@
     "browsers": "last 5 versions"
   },
   "file-type-pug": "{\"compilers\":[\"pug\"]}",
-  "file-type-css": "{\"compilers\":[\"autoprefixer\",\"cssnext\",\"minify-css\"]}",
+  "file-type-css": "{\"compilers\":[\"autoprefixer\",\"cssnext\",\"minify-css\"],\"compiler-minify-css\":{\"enabled\":false}}",
   "file-type-javascript": "{\"compilers\":[\"concat-js\",\"babel\",\"uglify-js\"]}",
   "file-type-stylus": "{\"compilers\":[\"stylus\",\"autoprefixer\",\"minify-css\"]}",
   "file-type-markdown": "{\"compilers\":[\"markdown\"]}",
